// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embedded React Element 1`] = `
Array [
  "This is a ",
  <a
    href="https://www.example.com"
  >
    link
  </a>,
]
`;

exports[`Embedded React Element with non-string value 1`] = `
Array [
  "This is a ",
  <a
    href={
      Object {
        "toString": [Function],
        "valueOf": [Function],
      }
    }
  />,
]
`;

exports[`React Element as value 1`] = `
Array [
  "Hello world",
  " ",
  "AnyComponent",
  " ",
  "I meet ",
  "John",
  " ",
  "ichi",
]
`;

exports[`argument 1`] = `
Array [
  "I meet ",
  "John",
]
`;

exports[`components override defaultComponents 1`] = `
Array [
  "This is a ",
  <span
    href="https://www.example.com"
  >
    link
  </span>,
]
`;

exports[`defaultComponents 1`] = `
Array [
  "This is a ",
  <a
    href="https://www.example.com"
  >
    link
  </a>,
]
`;

exports[`imperative 1`] = `
<input
  placeholder="Hello world"
/>
`;

exports[`imperative nested 1`] = `
<input
  placeholder="This is nested"
/>
`;

exports[`plain.string 1`] = `"Hello world"`;

exports[`plural 1`] = `"four"`;

exports[`regression.0 1`] = `
<input
  placeholder="Are you sure to change the B?"
/>
`;

exports[`regression.1 1`] = `
<input
  placeholder="Message shouldn't be HTML-escaped."
/>
`;
